# onnx_splines

./: .gitignore  Makefile  README.md  requirements.txt  spline_model.py  test_splines.py
cpp_validator/: CMakeLists.txt  conanfile.txt
cpp_validator/include/: csv_reader.hpp  cubic_spline.hpp  onnx_model.hpp  spline_validator.hpp
cpp_validator/src/: csv_reader.cpp  cubic_spline.cpp  main.cpp  onnx_model.cpp  spline_validator.cpp
java_validator/: build.gradle  settings.gradle
java_validator/src/main/java/com/splinevalidator/: CubicSpline.java  Main.java  ONNXModel.java
java_validator/src/test/java/com/splinevalidator/: SplineValidatorTest.java
